<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nz.co.fortytwo.signalk.server</groupId>
	<artifactId>signalk-server-java</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>signalk-server-java</name>
	<properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <bundle.name>nsb-${project.version}</bundle.name> -->
		<signalk.core.version>0.0.1-SNAPSHOT</signalk.core.version>
		<jetty.version>8.1.16.v20140903</jetty.version>
		<!-- <jetty.version>9.2.9.v20150224</jetty.version> -->

		<camel.version>2.15.6</camel.version>
		<camel.core.version>2.15.6</camel.core.version>
		<jna.version>4.0.0</jna.version>
		<apollo.version>1.7.1</apollo.version>
		<activemq.version>5.11.1</activemq.version>
	</properties>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>Tasman Consulting Ltd</name>
		<url>www.42.co.nz</url>
	</organization>
	<developers>
		<developer>
			<id>rob42</id>
			<name>Robert Huitema</name>
			<email>robert@42.co.nz</email>
		</developer>
	</developers>
	<repositories>
		<repository>
			<id>jcenter</id>
			<name>jcenter</name>
			<url>http://jcenter.bintray.com/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>java.net jni</id>
			<name>java.nt JNI Snapshot Repository</name>
			<url>https://maven.java.net/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>PJC</id>
			<name>Sparetime Repository</name>
			<url>http://www.sparetimelabs.com/maven2</url>
		</repository>
		<repository>
			<id>dma AIS</id>
			<name>DMA AisLib Repository</name>
			<url>http://repository-dma.forge.cloudbees.com/release</url>
		</repository>
		<repository>
			<id>maven-restlet</id>
			<name>Public online Restlet repository</name>
			<url>http://maven.restlet.com</url>
		</repository>
		<repository>
			<id>eclipse-paho</id>
			<url>https://repo.eclipse.org/content/repositories/paho-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>autoincrement-versions-maven-plugin</id>
			<name>autoincrement-versions-maven-plugin</name>
			<url>http://autoincrement-versions-maven-plugin.googlecode.com/svn/repo</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>

	</pluginRepositories>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<property>
			        <name>signalk.build</name>
			        <value>dev</value>
			    </property>
	        </activation>
			<dependencies>
				<dependency>
					<groupId>nz.co.fortytwo.signalk.core</groupId>
					<artifactId>signalk-core-java</artifactId>
					<version>${signalk.core.version}</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>release</id>
			<activation>
	            <activeByDefault>true</activeByDefault>
	        </activation>
			<dependencies>
				<dependency>
					<groupId>com.github.SignalK</groupId>
					<artifactId>signalk-core-java</artifactId>
					<version>JIT-Deploy-20</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
	<dependencies>

		<!-- ActiveMq -->
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-broker</artifactId>
			<version>${activemq.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-http</artifactId>
			<version>${activemq.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-stomp</artifactId>
			<version>${activemq.version}</version>
		</dependency>
		<dependency>
            <groupId>org.apache.activemq</groupId>
            <artifactId>activemq-camel</artifactId>
           <version>${activemq.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.activemq</groupId>
            <artifactId>activemq-pool</artifactId>
            <version>${activemq.version}</version>
        </dependency>  
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.1.5.RELEASE</version>
        </dependency>  

		<!-- serial comms -->

		<!-- jna LGPL, Apache -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>${jna.version}</version>
		</dependency>
		<!-- BSD -->
		<dependency>
			<groupId>com.sparetimelabs</groupId>
			<artifactId>purejavacomm</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Camel Apache2 licence -->
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-core</artifactId>
			<version>${camel.core.version}</version>
		</dependency>
		<dependency> 
		  <groupId>org.apache.camel</groupId> 
		  <artifactId>camel-spring-security</artifactId> 
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-websocket</artifactId>
			<version>${camel.core.version}</version>
		</dependency>
		<dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-jms</artifactId>
            <version>${camel.version}</version>
        </dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-stomp</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-cometd</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-xstream</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-stream</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-exec</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-restlet</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
		  <groupId>org.restlet.osgi</groupId>
		  <artifactId>org.restlet.ext.fileupload</artifactId>
		  <version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-jetty</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-test</artifactId>
			<version>${camel.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-quartz2</artifactId>
		    <version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-netty4</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-mqtt</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-urlrewrite</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel</groupId>
		    <artifactId>camel-ahc-ws</artifactId>
		    <version>${camel.version}</version>
		    <exclusions>
		    	<exclusion>
		    		<artifactId>netty</artifactId>
		    		<groupId>io.netty</groupId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		<dependency>
   			<groupId>org.apache.camel</groupId>
		    <artifactId>camel-xmpp</artifactId>
		    <version>${camel.version}</version>
		</dependency>
		<!-- jetty Apache/Eclipse licence -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-io</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1-glassfish</artifactId>
			<version>2.1.v20100127</version>
		</dependency>
		<!-- ais -->

		<!-- ais Apache licence -->
		<!-- <module>ais-lib-messages</module> -->
		<!-- <module>ais-lib-utils</module> -->
		<!-- <module>ais-lib-cli</module> -->
		<dependency>
			<groupId>dk.dma.ais.lib</groupId>
			<artifactId>ais-lib-communication</artifactId>
			<version>2.1</version>
		</dependency>


		<!-- json - Apache licence <dependency> <groupId>org.sharegov</groupId> 
			<artifactId>mjson</artifactId> <version>1.3</version> </dependency> -->

		<!-- commons and misc = apache licence -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.5</version>
		  </dependency>
		  <dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.5</version>
		  </dependency>
		  

		   <dependency>
		     <groupId>com.fasterxml.jackson.core</groupId>
		     <artifactId>jackson-core</artifactId>
		     <version>2.6.3</version>
		   </dependency>
		    
		   <dependency>
		     <groupId>com.fasterxml.jackson.core</groupId>
		     <artifactId>jackson-databind</artifactId>
		     <version>2.6.3</version>
		   </dependency>
		    
		   <dependency>
		     <groupId>com.fasterxml.jackson.core</groupId>
		     <artifactId>jackson-annotations</artifactId>
		     <version>2.6.3</version>
		   </dependency>
		<!-- time - apache licence -->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.4</version>
		</dependency>
		<!-- nmea LGPL 3 -->
		<dependency>
			<groupId>net.sf.marineapi</groupId>
			<artifactId>marineapi</artifactId>
			<version>0.9.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- commons -->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>commons-lang</groupId> -->
		<!-- <artifactId>commons-lang</artifactId> -->
		<!-- <version>2.4</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.commons</groupId> -->
		<!-- <artifactId>commons-exec</artifactId> -->
		<!-- <version>1.1</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<!-- xml BSD -->
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>1.6.1</version>
		</dependency>
		<!-- test http and ws - Apache lic -->
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.ning</groupId>
			<artifactId>async-http-client</artifactId>
			<version>1.8.14</version>
			<scope>test</scope>
<!-- 			<exclusions> -->
<!-- 				<exclusion> -->
<!-- 					<artifactId>netty</artifactId> -->
<!-- 					<groupId>io.netty</groupId> -->
<!-- 				</exclusion> -->
<!-- 			</exclusions> --> 
		</dependency>
		<dependency>
			<groupId>org.fusesource.mqtt-client</groupId>
			<artifactId>mqtt-client</artifactId>
			<version>1.10</version>
		</dependency>
		<!-- hawt dependencies -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.4.1</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>org.apache.httpcomponents</groupId> -->
		<!-- <artifactId>httpasyncclient</artifactId> -->
		<!-- <version>4.4.1</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.4.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.1</version>
		</dependency>
		<!-- zeroconf apache licence -->
		<dependency>
			<groupId>org.openhab.jmdns</groupId>
			<artifactId>jmdns</artifactId>
			<version>3.4.2</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
                                <version>2.19.1</version>

				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx512m -XX:MaxPermSize=32m</argLine>
				</configuration>
			</plugin>

			<!-- Allows the example to be run via 'mvn compile exec:java' -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
                                <version>1.5.0</version>
				<configuration>
					<mainClass>nz.co.fortytwo.signalk.server.ServerMain</mainClass>
					<includePluginDependencies>false</includePluginDependencies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
                                <version>8.1.16.v20140903</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2.1</version>
				<!-- Tell Maven when to execute this plugin -->
				<executions>
					<execution>
						<id>make-assembly-jar</id>
						<phase>package</phase>
						<configuration>
							<descriptorRefs>
								<!-- Tell Maven-Assembly to include dependencies in jar -->
								<descriptorId>jar-with-dependencies</descriptorId>
							</descriptorRefs>
							<archive>
								<manifest>
									<!-- Specify class to be run at startup -->
									<mainClass>nz.co.fortytwo.signalk.server.SignalKServer</mainClass>
								</manifest>
							</archive>
						</configuration>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<!-- <execution> <id>make-assembly-zip</id> <phase>package</phase> <configuration> -->
					<!-- <descriptors> <descriptor>src/main/release/assembly.xml</descriptor> 
						</descriptors> -->
					<!-- </configuration> <goals> <goal>single</goal> </goals> </execution> -->
				</executions>
			</plugin>
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>autoincrement-versions-maven-plugin</artifactId> 
				<version>2.0-SNAPSHOT</version> <executions> <execution> <id>update-pom-versions</id> 
				<goals> <goal>increment</goal> <goal>commit</goal> </goals> <phase>install</phase> 
				<configuration> <autoIncrementVersion>true</autoIncrementVersion> </configuration> 
				</execution> </executions> </plugin> -->
		</plugins>
	</build>
</project>